Hero Section Fixed fix - Hero Section Not Visible trying to fix.

--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -78,8 +78,7 @@ html{
     justify-content: space-evenly;
     align-items: center;
     text-align: center;
-    background: url('/assets/images/hero-background.jpg');
-    background-blend-mode: lighten;
+    background: url('assets/images/hero-background.jpg');
     background-repeat: no-repeat;
     background-position: center;
     font-family: 'Montserrat',sans-serif;
